GET /orders?status="" to list orders (#52)
* UserStory#34

* fix: add missing import

* feat: makes suggested changes from PR

- GetOrders now works within an optional status
- Simplifies code to use SQL over Golang functions for sorting
- Generates the swagger docs
- Some renaming of functions, variables and structs

* feat: adds pagination to GET /orders

* feat: updates variable names to avoid conflict with PR #53

* refactor: clean up object creation for order items

---------
