# api/types/entities.go
@@ -28,3 +28,39 @@ type SockVariant struct {
 	Quantity  int       `json:"quantity"`
 	CreatedAt time.Time `json:"createdAt"`
 }
+
+// Order represents an order in the system
+type Order struct {
+	ID            int         `json:"orderId"`
+	InvoiceNumber string      `json:"invoiceNumber"`
+	Total         float64     `json:"total"`
+	Address       Address     `json:"address"`
+	Contact       Contact     `json:"contact"`
+	Items         []OrderItem `json:"items"`
+	CreatedAt     time.Time   `json:"createdAt"`
+	Status        string      `json:"status"`
+}
+
+// OrderItem represents an item in an order
+type OrderItem struct {
+	Name     string  `json:"name"`
+	Size     string  `json:"size"`
+	Price    float64 `json:"price"`
+	Quantity int     `json:"quantity"`
+}
+
+// Address represents the shipping address for an order
+type Address struct {
+	Street  string  `json:"street"`
+	AptUnit *string `json:"aptUnit"`
+	State   string  `json:"state"`
+	Zipcode string  `json:"zipcode"`
+}
+
+// Contact represents the contact information for an order
+type Contact struct {
+	FirstName string  `json:"firstname"`
+	LastName  string  `json:"lastname"`
+	Email     string  `json:"email"`
+	Phone     *string `json:"phone"`
+}
